syntax = "proto3";

option objc_class_prefix = "HLW";
package helloworld;

// The greeting service definition.
service Greeter {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply) {}
}

// The request message containing the user's name.
message HelloRequest {
  string request_id = 1;
  string name = 2;
}

// The response message containing the greetings
message HelloReply {
  string request_id = 1;
  string message = 2;
}